# wp-wordcount-rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
